<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="false"
    android:background="#CDEFDB"
    tools:context=".ChargerActivity">

    <Button
        android:id="@+id/start_button"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:backgroundTint="#343434"
        android:text="@string/start_button"
        android:textSize="48sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/footerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:layout_constraintVertical_bias="0.847" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:backgroundTint="#343434"
        android:checkable="true"
        android:text="@string/cancel_button"
        android:textSize="48sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/footerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.849" />

    <Button
        android:id="@+id/language_button"
        android:layout_width="81dp"
        android:layout_height="87dp"
        android:backgroundTint="@color/white"
        android:text="@string/language"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/footerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:layout_constraintVertical_bias="0.911" />

    <Button
        android:id="@+id/instruction_button"
        android:layout_width="176dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/white"
        android:text="@string/instruction_button"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:layout_constraintVertical_bias="0.908" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="166dp"
        android:layout_height="166dp"
        android:contentDescription="@string/logo_description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/instruction_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:srcCompat="@drawable/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footerLayout"
        android:layout_width="fill_parent"
        android:layout_height="87dp"
        android:background="#26000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/byCharger_button"
            android:layout_width="169dp"
            android:layout_height="54dp"
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/medium_violeta"
            android:baselineAligned="false"
            android:text="@string/charger_button"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/byWifi_button"
            android:layout_width="169dp"
            android:layout_height="54dp"
            android:backgroundTint="@color/green"
            android:baselineAligned="false"
            android:text="@string/wifi_button"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toEndOf="@+id/byCharger_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="fill_parent"
        android:layout_height="94dp"
        android:background="@color/dark_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_wrapBehaviorInParent="horizontal_only"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:text="@string/label"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.533"
            tools:ignore="TextSizeCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="-2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>